--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <script src="https://cdn.jsdelivr.net/npm/ethers@6.13.2/dist/ethers.umd.min.js"></script>
     <style>
       body {
-        font-family: "Inter", sans-serif;
+        font-family: Inter, system-ui, sans-serif;
         background: #f5f7fb;
         margin: 0;
       }
       header {
         background: #002b5b;
-        color: white;
+        color: #fff;
         text-align: center;
         padding: 20px 0;
         font-size: 1.3rem;
@@ -29,7 +29,7 @@
         padding: 0 20px;
       }
       .card {
-        background: white;
+        background: #fff;
         border-radius: 10px;
         border: 1px solid #d0d7de;
         padding: 24px 28px;
@@ -43,7 +43,7 @@
       }
       button {
         background: #00509e;
-        color: white;
+        color: #fff;
         border: none;
         border-radius: 6px;
         padding: 10px 18px;
@@ -73,17 +73,19 @@
       }
       .toast {
         position: fixed;
-        bottom: 20px;
         right: 20px;
+        bottom: 20px;
         background: #333;
         color: #fff;
-        padding: 12px 14px;
         border-radius: 6px;
+        padding: 12px 14px;
         display: none;
+      }
+      .row > * {
+        margin-right: 6px;
       }
     </style>
   </head>
-
   <body>
     <header>FIN556 – Decentralized Exchange Dashboard (Hoodi Testnet)</header>
 
@@ -119,7 +121,7 @@
 
       <section class="card">
         <h3>Trade Simulator</h3>
-        <div>
+        <div class="row">
           <label>From Token</label>
           <select id="fromToken"></select>
           <input id="fromAmount" placeholder="Amount" />
@@ -141,26 +143,27 @@
     <div id="toast" class="toast"></div>
 
     <script>
+      // --------- Network & addresses ----------
       const HOODI = {
+        chainIdDec: 560048,
+        chainIdHex: "0x88BB0",
         rpc: "https://rpc.hoodi.ethpandaops.io",
         explorer: "https://hoodi.etherscan.io",
-        chainId: 560048,
       };
-
       const ADDR = {
         ROUTER: "0x5b491662E508c2E405500C8BF9d67E5dF780cD8e",
         FACTORY: "0x342D7aeC78cd3b581eb67655B6B7Bb157328590e",
         WETH: "0x7a1fd5C3185fe6261577AccEe220844Dc9026225",
       };
-
       const TOKEN_ADDRS = [
-        "0x341aac04059a1e81e6390177c4e4d1992b422d84",
-        "0x7Be129f76C4FC82752Dd1ddCCC154F2298e2a435",
-        "0xC3c7E367D9047F8871ef553C02938189ca122f73",
-        "0x97a47102478072710fBe2b2fE6c762b1F6cf2B06",
-        "0x341dA74120EBFE04041F0D245cff62950ccfd64F",
+        "0x341aac04059a1e81e6390177c4e4d1992b422d84", // HOODI
+        "0x7Be129f76C4FC82752Dd1ddCCC154F2298e2a435", // XLZD2
+        "0xC3c7E367D9047F8871ef553C02938189ca122f73", // SToken-A
+        "0x97a47102478072710fBe2b2fE6c762b1F6cf2B06", // TTK
+        "0x341dA74120EBFE04041F0D245cff62950ccfd64F", // C-K-H
       ];
 
+      // --------- ABIs ----------
       const ERC20_ABI = [
         "function name() view returns (string)",
         "function symbol() view returns (string)",
@@ -169,13 +172,11 @@
         "function allowance(address,address) view returns (uint256)",
         "function approve(address,uint256) returns (bool)",
       ];
-
       const PAIR_ABI = [
         "function token0() view returns (address)",
         "function token1() view returns (address)",
         "function getReserves() view returns (uint112,uint112,uint32)",
       ];
-
       const ROUTER_ABI = [
         "function getAmountsOut(uint amountIn, address[] calldata path) external view returns (uint[] memory amounts)",
         "function swapExactTokensForTokens(uint amountIn,uint amountOutMin,address[] calldata path,address to,uint deadline) external returns (uint[] memory amounts)",
@@ -183,12 +184,15 @@
         "function swapExactTokensForETH(uint amountIn,uint amountOutMin,address[] calldata path,address to,uint deadline) external returns (uint[] memory amounts)",
       ];
 
+      // --------- State ----------
       let provider, signer, account;
       const rpcProvider = new ethers.JsonRpcProvider(HOODI.rpc);
-      let tokenDetails = [];
+      let tokenDetails = []; // {name,symbol,address,decimals}
 
+      // --------- Utils ----------
+      const $ = (id) => document.getElementById(id);
       function toast(msg, type = "info") {
-        const t = document.getElementById("toast");
+        const t = $("toast");
         t.textContent = msg;
         t.style.background =
           type === "error"
@@ -199,23 +203,67 @@
         t.style.display = "block";
         setTimeout(() => (t.style.display = "none"), 4000);
       }
+      function metaFor(addr) {
+        if (addr === "ETH")
+          return { symbol: "ETH", address: "ETH", decimals: 18 };
+        return tokenDetails.find(
+          (t) => t.address.toLowerCase() === addr.toLowerCase()
+        );
+      }
+      function buildPath(from, to) {
+        // UniswapV2-style routing via WETH
+        if (from === "ETH" && to !== "ETH") return [ADDR.WETH, to];
+        if (from !== "ETH" && to === "ETH") return [from, ADDR.WETH];
+        if (from !== "ETH" && to !== "ETH") return [from, ADDR.WETH, to];
+        throw new Error("ETH→ETH swap is not valid");
+      }
+      async function ensureHoodi() {
+        if (!window.ethereum) return;
+        const net = await provider.getNetwork();
+        if (Number(net.chainId) === HOODI.chainIdDec) return;
+        try {
+          await window.ethereum.request({
+            method: "wallet_switchEthereumChain",
+            params: [{ chainId: HOODI.chainIdHex }],
+          });
+        } catch (e) {
+          if (e.code === 4902) {
+            await window.ethereum.request({
+              method: "wallet_addEthereumChain",
+              params: [
+                {
+                  chainId: HOODI.chainIdHex,
+                  chainName: "Hoodi Testnet",
+                  rpcUrls: [HOODI.rpc],
+                  nativeCurrency: {
+                    name: "Ether",
+                    symbol: "ETH",
+                    decimals: 18,
+                  },
+                  blockExplorerUrls: [HOODI.explorer],
+                },
+              ],
+            });
+          } else {
+            throw e;
+          }
+        }
+      }
 
+      // --------- Connect & load ----------
       async function connect() {
         if (!window.ethereum) return toast("Please install MetaMask!", "error");
         provider = new ethers.BrowserProvider(window.ethereum);
         await provider.send("eth_requestAccounts", []);
         signer = await provider.getSigner();
         account = await signer.getAddress();
-        document.getElementById("walletAddr").textContent = account;
+        $("walletAddr").textContent = account;
 
+        await ensureHoodi();
         const net = await provider.getNetwork();
-        document.getElementById(
-          "chainName"
-        ).textContent = `${net.name} (${net.chainId})`;
+        $("chainName").textContent = `${net.name} (${net.chainId})`;
         const bal = await provider.getBalance(account);
-        document.getElementById(
-          "ethBalance"
-        ).textContent = `${ethers.formatEther(bal)} ETH`;
+        $("ethBalance").textContent = `${ethers.formatEther(bal)} ETH`;
 
         await loadTokens();
         await loadPools();
@@ -223,10 +271,9 @@
       }
 
       async function loadTokens() {
-        const tbody = document.querySelector("#tokenTable tbody");
+        const tbody = $("tokenTable").querySelector("tbody");
         tbody.innerHTML = "";
         tokenDetails = [];
-
         for (const addr of TOKEN_ADDRS) {
           try {
             const c = new ethers.Contract(addr, ERC20_ABI, rpcProvider);
@@ -236,16 +283,16 @@
               c.decimals(),
               c.balanceOf(account),
             ]);
-            const formatted = ethers.formatUnits(balance, decimals);
+            tokenDetails.push({ name, symbol, address: addr, decimals });
+            const balFmt = ethers.formatUnits(balance, decimals);
             tbody.innerHTML += `<tr><td>${name}</td><td>${symbol}</td><td>${decimals}</td>
-              <td>${Number(formatted).toFixed(4)}</td>
+              <td>${Number(balFmt).toFixed(4)}</td>
               <td><a href="${
                 HOODI.explorer
               }/address/${addr}" target="_blank">${addr.slice(
               0,
               6
             )}...${addr.slice(-4)}</a></td></tr>`;
-            tokenDetails.push({ name, symbol, address: addr, decimals });
           } catch (e) {
             console.warn("Token load failed:", addr);
           }
@@ -253,8 +300,8 @@
       }
 
       async function loadPools() {
-        const list = document.getElementById("poolList");
-        list.textContent = "Loading...";
+        const holder = $("poolList");
+        holder.textContent = "Loading...";
         try {
           const factory = new ethers.Contract(
             ADDR.FACTORY,
@@ -280,92 +327,105 @@
                      <td>${t0.slice(0, 6)}...</td><td>${res[0]}</td>
                      <td>${t1.slice(0, 6)}...</td><td>${res[1]}</td></tr>`;
           }
-          list.innerHTML = html + "</table>";
-        } catch (err) {
-          console.error(err);
-          list.textContent = "Failed to load pools";
+          holder.innerHTML = html + "</table>";
+        } catch (e) {
+          holder.textContent = "Failed to load pools";
         }
       }
 
       async function initTradeUI() {
-        const fromSel = document.getElementById("fromToken");
-        const toSel = document.getElementById("toToken");
+        const fromSel = $("fromToken"),
+          toSel = $("toToken");
         fromSel.innerHTML = "";
         toSel.innerHTML = "";
-
-        const allTokens = [{ symbol: "ETH", address: "ETH" }, ...tokenDetails];
-        allTokens.forEach((t) => {
-          const opt1 = document.createElement("option");
-          opt1.value = t.address;
-          opt1.textContent = t.symbol;
-          fromSel.appendChild(opt1);
-
-          const opt2 = document.createElement("option");
-          opt2.value = t.address;
-          opt2.textContent = t.symbol;
-          toSel.appendChild(opt2);
-        });
-
+        const all = [
+          { symbol: "ETH", address: "ETH", decimals: 18 },
+          ...tokenDetails,
+        ];
+        for (const t of all) {
+          const o1 = document.createElement("option");
+          o1.value = t.address;
+          o1.textContent = t.symbol;
+          fromSel.appendChild(o1);
+          const o2 = document.createElement("option");
+          o2.value = t.address;
+          o2.textContent = t.symbol;
+          toSel.appendChild(o2);
+        }
         fromSel.value = "ETH";
         if (tokenDetails[0]) toSel.value = tokenDetails[0].address;
       }
 
+      // --------- Quote & Swap ----------
       async function getQuote() {
         try {
+          const from = $("fromToken").value;
+          const to = $("toToken").value;
+          const amt = $("fromAmount").value;
+          if (!amt || Number(amt) <= 0 || from === to)
+            return toast("Enter a valid pair and amount", "error");
+
+          const fromMeta = metaFor(from);
+          const path = buildPath(from, to);
           const router = new ethers.Contract(
             ADDR.ROUTER,
             ROUTER_ABI,
             rpcProvider
           );
-          const from = document.getElementById("fromToken").value;
-          const to = document.getElementById("toToken").value;
-          const amount = document.getElementById("fromAmount").value;
-          if (!amount || from === to)
-            return toast("Enter valid swap pair/amount", "error");
-          const path = [
-            from === "ETH" ? ADDR.WETH : from,
-            to === "ETH" ? ADDR.WETH : to,
-          ];
-          const amountIn = ethers.parseUnits(amount, 18);
-          const out = await router.getAmountsOut(amountIn, path);
-          document.getElementById("toAmount").value = ethers.formatUnits(
-            out[1],
-            18
+
+          const amountIn = ethers.parseUnits(amt, fromMeta.decimals);
+          const amounts = await router.getAmountsOut(amountIn, path);
+
+          const toMeta = metaFor(to);
+          $("toAmount").value = ethers.formatUnits(
+            amounts.at(-1),
+            toMeta.decimals
           );
           toast("Quote updated", "success");
-        } catch (err) {
-          toast("Quote failed: " + err.message, "error");
+        } catch (e) {
+          toast("Quote failed: " + e.message, "error");
         }
       }
 
-      async function executeSwap() {
-        try {
-          if (!signer) return toast("Please connect wallet first", "error");
-          const router = new ethers.Contract(ADDR.ROUTER, ROUTER_ABI, signer);
-          const from = document.getElementById("fromToken").value;
-          const to = document.getElementById("toToken").value;
-          const amount = document.getElementById("fromAmount").value;
-          const slippage = parseFloat(
-            document.getElementById("slippage").value || "1"
-          );
-          const deadline =
-            Math.floor(Date.now() / 1000) +
-            60 * parseInt(document.getElementById("deadline").value);
+      async function ensureApproval(token, owner, spender, amount) {
+        const erc = new ethers.Contract(token, ERC20_ABI, signer);
+        const current = await erc.allowance(owner, spender);
+        if (current >= amount) return true;
+        const tx = await erc.approve(spender, amount);
+        toast("Approving…");
+        await tx.wait();
+        return true;
+      }
 
-          if (!amount || from === to)
+      async function executeSwap() {
+        const swapBtn = $("swapBtn");
+        try {
+          if (!signer) return toast("Connect wallet first", "error");
+          await ensureHoodi();
+
+          const from = $("fromToken").value;
+          const to = $("toToken").value;
+          const amt = $("fromAmount").value;
+          const slipPct = Math.max(0, Number($("slippage").value || "1"));
+          const dl =
+            Math.floor(Date.now() / 1000) +
+            60 * Number($("deadline").value || "10");
+          if (!amt || Number(amt) <= 0 || from === to)
             return toast("Enter valid swap data", "error");
 
-          const path = [
-            from === "ETH" ? ADDR.WETH : from,
-            to === "ETH" ? ADDR.WETH : to,
-          ];
-          const amountIn = ethers.parseUnits(amount, 18);
+          const fromMeta = metaFor(from);
+          const toMeta = metaFor(to);
+          const amountIn = ethers.parseUnits(amt, fromMeta.decimals);
+          const path = buildPath(from, to);
 
-          const out = await router.getAmountsOut(amountIn, path);
+          const router = new ethers.Contract(ADDR.ROUTER, ROUTER_ABI, signer);
+          const quoted = await router.getAmountsOut(amountIn, path);
+          const out = quoted.at(-1);
           const amountOutMin =
-            out[1] - (out[1] * BigInt(Math.floor(slippage * 100))) / 10000n;
+            out - (out * BigInt(Math.floor(slipPct * 100))) / 10000n;
 
-          toast("Swap pending...");
+          swapBtn.disabled = true;
+          toast("Sending swap…");
 
           let tx;
           if (from === "ETH") {
@@ -373,42 +433,47 @@
               amountOutMin,
               path,
               account,
-              deadline,
+              dl,
               { value: amountIn }
             );
           } else if (to === "ETH") {
-            const token = new ethers.Contract(from, ERC20_ABI, signer);
-            await token.approve(ADDR.ROUTER, amountIn);
+            await ensureApproval(from, account, ADDR.ROUTER, amountIn);
             tx = await router.swapExactTokensForETH(
               amountIn,
               amountOutMin,
               path,
               account,
-              deadline
+              dl
             );
           } else {
-            const token = new ethers.Contract(from, ERC20_ABI, signer);
-            await token.approve(ADDR.ROUTER, amountIn);
+            await ensureApproval(from, account, ADDR.ROUTER, amountIn);
             tx = await router.swapExactTokensForTokens(
               amountIn,
               amountOutMin,
               path,
               account,
-              deadline
+              dl
             );
           }
 
           await tx.wait();
           toast("Swap successful!", "success");
           await loadTokens();
-        } catch (err) {
-          toast("Swap failed: " + (err.message || "unknown"), "error");
+          await getQuote();
+        } catch (e) {
+          toast(
+            "Swap failed: " + (e?.reason || e?.message || "unknown"),
+            "error"
+          );
+        } finally {
+          swapBtn.disabled = false;
         }
       }
 
-      document.getElementById("connectBtn").onclick = connect;
-      document.getElementById("quoteBtn").onclick = getQuote;
-      document.getElementById("swapBtn").onclick = executeSwap;
+      // --------- Bind ----------
+      $("connectBtn").onclick = connect;
+      $("quoteBtn").onclick = getQuote;
+      $("swapBtn").onclick = executeSwap;
     </script>
   </body>
 </html>
