Updated Hoodi DApp scripts and frontend layout

--- a/index.html
+++ b/index.html
@@ -81,9 +81,6 @@
         padding: 12px 14px;
         display: none;
       }
-      .row > * {
-        margin-right: 6px;
-      }
     </style>
   </head>
   <body>
@@ -94,7 +91,7 @@
         <h3>Wallet Connection</h3>
         <button id="connectBtn">🔗 Connect Wallet</button>
         <p>Wallet: <span id="walletAddr">Not connected</span></p>
-        <p>Network: <span id="chainName">–</span></p>
+        <p>Network: <span id="chainName">560048</span></p>
         <p>ETH Balance: <span id="ethBalance">–</span></p>
       </section>
 
@@ -121,7 +118,7 @@
 
       <section class="card">
         <h3>Trade Simulator</h3>
-        <div class="row">
+        <div>
           <label>From Token</label>
           <select id="fromToken"></select>
           <input id="fromAmount" placeholder="Amount" />
@@ -143,10 +140,8 @@
     <div id="toast" class="toast"></div>
 
     <script>
-      // --------- Network & addresses ----------
       const HOODI = {
         chainIdDec: 560048,
-        chainIdHex: "0x88BB0",
         rpc: "https://rpc.hoodi.ethpandaops.io",
         explorer: "https://hoodi.etherscan.io",
       };
@@ -156,21 +151,17 @@
         WETH: "0x7a1fd5C3185fe6261577AccEe220844Dc9026225",
       };
       const TOKEN_ADDRS = [
-        "0x341aac04059a1e81e6390177c4e4d1992b422d84", // HOODI
-        "0x7Be129f76C4FC82752Dd1ddCCC154F2298e2a435", // XLZD2
-        "0xC3c7E367D9047F8871ef553C02938189ca122f73", // SToken-A
-        "0x97a47102478072710fBe2b2fE6c762b1F6cf2B06", // TTK
-        "0x341dA74120EBFE04041F0D245cff62950ccfd64F", // C-K-H
+        "0x341aac04059a1e81e6390177c4e4d1992b422d84",
+        "0x7Be129f76C4FC82752Dd1ddCCC154F2298e2a435",
+        "0xC3c7E367D9047F8871ef553C02938189ca122f73",
+        "0x97a47102478072710fBe2b2fE6c762b1F6cf2B06",
+        "0x341dA74120EBFE04041F0D245cff62950ccfd64F",
       ];
-
-      // --------- ABIs ----------
       const ERC20_ABI = [
         "function name() view returns (string)",
         "function symbol() view returns (string)",
         "function decimals() view returns (uint8)",
         "function balanceOf(address) view returns (uint256)",
-        "function allowance(address,address) view returns (uint256)",
-        "function approve(address,uint256) returns (bool)",
       ];
       const PAIR_ABI = [
         "function token0() view returns (address)",
@@ -184,15 +175,12 @@
         "function swapExactTokensForETH(uint amountIn,uint amountOutMin,address[] calldata path,address to,uint deadline) external returns (uint[] memory amounts)",
       ];
 
-      // --------- State ----------
       let provider, signer, account;
       const rpcProvider = new ethers.JsonRpcProvider(HOODI.rpc);
-      let tokenDetails = []; // {name,symbol,address,decimals}
+      let tokenDetails = [];
 
-      // --------- Utils ----------
-      const $ = (id) => document.getElementById(id);
       function toast(msg, type = "info") {
-        const t = $("toast");
+        const t = document.getElementById("toast");
         t.textContent = msg;
         t.style.background =
           type === "error"
@@ -203,75 +191,25 @@
         t.style.display = "block";
         setTimeout(() => (t.style.display = "none"), 4000);
       }
-      function metaFor(addr) {
-        if (addr === "ETH")
-          return { symbol: "ETH", address: "ETH", decimals: 18 };
-        return tokenDetails.find(
-          (t) => t.address.toLowerCase() === addr.toLowerCase()
-        );
-      }
-      function buildPath(from, to) {
-        // UniswapV2-style routing via WETH
-        if (from === "ETH" && to !== "ETH") return [ADDR.WETH, to];
-        if (from !== "ETH" && to === "ETH") return [from, ADDR.WETH];
-        if (from !== "ETH" && to !== "ETH") return [from, ADDR.WETH, to];
-        throw new Error("ETH→ETH swap is not valid");
-      }
-      async function ensureHoodi() {
-        if (!window.ethereum) return;
-        const net = await provider.getNetwork();
-        if (Number(net.chainId) === HOODI.chainIdDec) return;
-        try {
-          await window.ethereum.request({
-            method: "wallet_switchEthereumChain",
-            params: [{ chainId: HOODI.chainIdHex }],
-          });
-        } catch (e) {
-          if (e.code === 4902) {
-            await window.ethereum.request({
-              method: "wallet_addEthereumChain",
-              params: [
-                {
-                  chainId: HOODI.chainIdHex,
-                  chainName: "Hoodi Testnet",
-                  rpcUrls: [HOODI.rpc],
-                  nativeCurrency: {
-                    name: "Ether",
-                    symbol: "ETH",
-                    decimals: 18,
-                  },
-                  blockExplorerUrls: [HOODI.explorer],
-                },
-              ],
-            });
-          } else {
-            throw e;
-          }
-        }
-      }
 
-      // --------- Connect & load ----------
       async function connect() {
-        if (!window.ethereum) return toast("Please install MetaMask!", "error");
+        if (!window.ethereum) return toast("Install MetaMask", "error");
         provider = new ethers.BrowserProvider(window.ethereum);
         await provider.send("eth_requestAccounts", []);
         signer = await provider.getSigner();
         account = await signer.getAddress();
-        $("walletAddr").textContent = account;
-
-        await ensureHoodi();
-        const net = await provider.getNetwork();
-        $("chainName").textContent = `${net.name} (${net.chainId})`;
+        document.getElementById("walletAddr").textContent = account;
         const bal = await provider.getBalance(account);
-        $("ethBalance").textContent = `${ethers.formatEther(bal)} ETH`;
-
+        document.getElementById(
+          "ethBalance"
+        ).textContent = `${ethers.formatEther(bal)} ETH`;
         await loadTokens();
         await loadPools();
         await initTradeUI();
       }
 
       async function loadTokens() {
-        const tbody = $("tokenTable").querySelector("tbody");
+        const tbody = document.querySelector("#tokenTable tbody");
         tbody.innerHTML = "";
         tokenDetails = [];
         for (const addr of TOKEN_ADDRS) {
@@ -284,33 +222,31 @@
               c.balanceOf(account),
             ]);
             tokenDetails.push({ name, symbol, address: addr, decimals });
-            const balFmt = ethers.formatUnits(balance, decimals);
             tbody.innerHTML += `<tr><td>${name}</td><td>${symbol}</td><td>${decimals}</td>
-              <td>${Number(balFmt).toFixed(4)}</td>
-              <td><a href="${
-                HOODI.explorer
-              }/address/${addr}" target="_blank">${addr.slice(
-              0,
-              6
-            )}...${addr.slice(-4)}</a></td></tr>`;
+      <td>${Number(ethers.formatUnits(balance, decimals)).toFixed(4)}</td>
+      <td><a href="${
+        HOODI.explorer
+      }/address/${addr}" target="_blank">${addr.slice(0, 6)}...${addr.slice(
+              -4
+            )}</a></td></tr>`;
           } catch (e) {
-            console.warn("Token load failed:", addr);
+            console.warn("Token failed:", addr);
           }
         }
       }
 
       async function loadPools() {
-        const holder = $("poolList");
-        holder.textContent = "Loading...";
+        const list = document.getElementById("poolList");
+        list.textContent = "Loading...";
         try {
           const factory = new ethers.Contract(
             ADDR.FACTORY,
             ["function getPair(address,address) view returns (address)"],
             rpcProvider
           );
-          let html = `<table><tr><th>Pair Address</th><th>Token0</th><th>Reserve0</th><th>Token1</th><th>Reserve1</th></tr>`;
-          for (const token of TOKEN_ADDRS) {
-            const pairAddr = await factory.getPair(token, ADDR.WETH);
+          let html = `<table><tr><th>Pair</th><th>Token0</th><th>Token1</th><th>Res0</th><th>Res1</th><th>Price(0→1)</th><th>Price(1→0)</th></tr>`;
+          for (const t of TOKEN_ADDRS) {
+            const pairAddr = await factory.getPair(t, ADDR.WETH);
             if (pairAddr === ethers.ZeroAddress) continue;
             const pair = new ethers.Contract(pairAddr, PAIR_ABI, rpcProvider);
             const [t0, t1, res] = await Promise.all([
@@ -318,31 +254,43 @@
               pair.token1(),
               pair.getReserves(),
             ]);
+            const token0 = new ethers.Contract(t0, ERC20_ABI, rpcProvider);
+            const token1 = new ethers.Contract(t1, ERC20_ABI, rpcProvider);
+            let [s0, s1, d0, d1] = await Promise.all([
+              token0.symbol(),
+              token1.symbol(),
+              token0.decimals(),
+              token1.decimals(),
+            ]);
+            const r0 = parseFloat(ethers.formatUnits(res[0], d0));
+            const r1 = parseFloat(ethers.formatUnits(res[1], d1));
+            const p01 = r1 / r0,
+              p10 = r0 / r1;
             html += `<tr><td><a href="${
               HOODI.explorer
             }/address/${pairAddr}" target="_blank">${pairAddr.slice(
               0,
               8
             )}...</a></td>
-                     <td>${t0.slice(0, 6)}...</td><td>${res[0]}</td>
-                     <td>${t1.slice(0, 6)}...</td><td>${res[1]}</td></tr>`;
+      <td>${s0}</td><td>${s1}</td><td>${r0.toFixed(4)}</td><td>${r1.toFixed(
+              4
+            )}</td>
+      <td>${p01.toFixed(6)}</td><td>${p10.toFixed(6)}</td></tr>`;
           }
-          holder.innerHTML = html + "</table>";
-        } catch (e) {
-          holder.textContent = "Failed to load pools";
+          list.innerHTML = html + "</table>";
+        } catch (err) {
+          console.error(err);
+          list.textContent = "Failed to load pools";
         }
       }
 
       async function initTradeUI() {
-        const fromSel = $("fromToken"),
-          toSel = $("toToken");
+        const fromSel = document.getElementById("fromToken");
+        const toSel = document.getElementById("toToken");
         fromSel.innerHTML = "";
         toSel.innerHTML = "";
-        const all = [
-          { symbol: "ETH", address: "ETH", decimals: 18 },
-          ...tokenDetails,
-        ];
-        for (const t of all) {
+        const all = [{ symbol: "ETH", address: "ETH" }, ...tokenDetails];
+        all.forEach((t) => {
           const o1 = document.createElement("option");
           o1.value = t.address;
           o1.textContent = t.symbol;
@@ -351,129 +299,12 @@
           o2.value = t.address;
           o2.textContent = t.symbol;
           toSel.appendChild(o2);
-        }
+        });
         fromSel.value = "ETH";
         if (tokenDetails[0]) toSel.value = tokenDetails[0].address;
       }
 
-      // --------- Quote & Swap ----------
-      async function getQuote() {
-        try {
-          const from = $("fromToken").value;
-          const to = $("toToken").value;
-          const amt = $("fromAmount").value;
-          if (!amt || Number(amt) <= 0 || from === to)
-            return toast("Enter a valid pair and amount", "error");
-
-          const fromMeta = metaFor(from);
-          const path = buildPath(from, to);
-          const router = new ethers.Contract(
-            ADDR.ROUTER,
-            ROUTER_ABI,
-            rpcProvider
-          );
-
-          const amountIn = ethers.parseUnits(amt, fromMeta.decimals);
-          const amounts = await router.getAmountsOut(amountIn, path);
-
-          const toMeta = metaFor(to);
-          $("toAmount").value = ethers.formatUnits(
-            amounts.at(-1),
-            toMeta.decimals
-          );
-          toast("Quote updated", "success");
-        } catch (e) {
-          toast("Quote failed: " + e.message, "error");
-        }
-      }
-
-      async function ensureApproval(token, owner, spender, amount) {
-        const erc = new ethers.Contract(token, ERC20_ABI, signer);
-        const current = await erc.allowance(owner, spender);
-        if (current >= amount) return true;
-        const tx = await erc.approve(spender, amount);
-        toast("Approving…");
-        await tx.wait();
-        return true;
-      }
-
-      async function executeSwap() {
-        const swapBtn = $("swapBtn");
-        try {
-          if (!signer) return toast("Connect wallet first", "error");
-          await ensureHoodi();
-
-          const from = $("fromToken").value;
-          const to = $("toToken").value;
-          const amt = $("fromAmount").value;
-          const slipPct = Math.max(0, Number($("slippage").value || "1"));
-          const dl =
-            Math.floor(Date.now() / 1000) +
-            60 * Number($("deadline").value || "10");
-          if (!amt || Number(amt) <= 0 || from === to)
-            return toast("Enter valid swap data", "error");
-
-          const fromMeta = metaFor(from);
-          const toMeta = metaFor(to);
-          const amountIn = ethers.parseUnits(amt, fromMeta.decimals);
-          const path = buildPath(from, to);
-
-          const router = new ethers.Contract(ADDR.ROUTER, ROUTER_ABI, signer);
-          const quoted = await router.getAmountsOut(amountIn, path);
-          const out = quoted.at(-1);
-          const amountOutMin =
-            out - (out * BigInt(Math.floor(slipPct * 100))) / 10000n;
-
-          swapBtn.disabled = true;
-          toast("Sending swap…");
-
-          let tx;
-          if (from === "ETH") {
-            tx = await router.swapExactETHForTokens(
-              amountOutMin,
-              path,
-              account,
-              dl,
-              { value: amountIn }
-            );
-          } else if (to === "ETH") {
-            await ensureApproval(from, account, ADDR.ROUTER, amountIn);
-            tx = await router.swapExactTokensForETH(
-              amountIn,
-              amountOutMin,
-              path,
-              account,
-              dl
-            );
-          } else {
-            await ensureApproval(from, account, ADDR.ROUTER, amountIn);
-            tx = await router.swapExactTokensForTokens(
-              amountIn,
-              amountOutMin,
-              path,
-              account,
-              dl
-            );
-          }
-
-          await tx.wait();
-          toast("Swap successful!", "success");
-          await loadTokens();
-          await getQuote();
-        } catch (e) {
-          toast(
-            "Swap failed: " + (e?.reason || e?.message || "unknown"),
-            "error"
-          );
-        } finally {
-          swapBtn.disabled = false;
-        }
-      }
-
-      // --------- Bind ----------
-      $("connectBtn").onclick = connect;
-      $("quoteBtn").onclick = getQuote;
-      $("swapBtn").onclick = executeSwap;
+      document.getElementById("connectBtn").onclick = connect;
     </script>
   </body>
 </html>
